second model for comparison

--- a/capstonemodelling.ipynb
+++ b/capstonemodelling.ipynb
@@ -815,40 +815,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b82479",
+   "id": "c565354f",
    "metadata": {},
    "source": [
     "## Model Fitting\n",
     "\n",
-    "Predictive Task 1: Predicting Public Domain Status\n",
-    "Goal: Predict whether an artwork is in the public domain based on various attributes.\n",
+    "In this project, we worked on a dataset ('metdata_cleaned.csv') containing information about artifacts from the Metropolitan Museum of Art. The goal was to build a classification model to predict whether an artifact is in the public domain or not.\n",
     "\n",
-    "Target Variable: isPublicDomain (True/False)\n",
-    "Features: Could include accessionYear, department, culture, and any other variables that might influence an artwork's public domain status. Avoid using primaryImage and primaryImageSmall directly unless you're extracting features from these images.\n",
-    "Predictive Task 2: Forecasting Artwork Acquisition Year\n",
-    "Goal: Predict the year an artwork was acquired by the museum.\n",
+    "### Data Preprocessing:\n",
     "\n",
-    "Target Variable: accessionYear\n",
-    "Features: This is more challenging since many features may not directly correlate with acquisition year, but department, culture, and dummy variables derived from objectName could provide some historical context that aligns with museum acquisition trends.\n",
-    "Predictive Task 3: Highlight Prediction\n",
-    "Goal: Predict whether an artwork is highlighted by the museum.\n",
+    "We started by loading the dataset using pandas and created dummy variables for categorical features 'department' and 'culture'.\n",
+    "The target variable 'isPublicDomain' was separated from the feature dataset.\n",
+    "To handle missing values, we performed imputation using the median strategy on numeric columns to ensure robustness against outliers.\n",
+    "Initially, we encountered a mismatch in the number of columns between the imputed data and the feature dataset, which was resolved by selecting only the first 7 numeric columns for imputation.\n",
     "\n",
-    "Target Variable: isHighlight (True/False)\n",
-    "Features: Include accessionYear, department, culture, isPublicDomain, and potentially encoded constituents information if you can extract meaningful numeric data from it."
+    "### Model Training and Evaluation:\n",
+    "\n",
+    "After preprocessing, we standardized the feature dataset using StandardScaler to ensure all features have a mean of 0 and a standard deviation of 1.\n",
+    "The dataset was split into training and testing sets with a ratio of 80:20 using train_test_split.\n",
+    "We trained a Logistic Regression model with a maximum iteration of 1000 on the training data.\n",
+    "Model evaluation was performed on the test set using various metrics such as accuracy, precision, recall, F1 score, and ROC-AUC score.\n",
+    "The performance metrics of the trained logistic regression model were printed, showing an accuracy of 0.84, precision of 0.83, recall of 0.99, F1 score of 0.90, and ROC-AUC score of 0.80.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "30ad83d8",
+   "id": "878529d5",
    "metadata": {},
    "source": [
-    "Example Model 1: Decision Tree"
+    "### Example Model 1: Decision Tree"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b71dbc2f",
+   "id": "e1300f6d",
    "metadata": {},
    "outputs": [
     {
@@ -890,16 +891,13 @@
     "\n",
     "# Apply imputation to numeric columns only\n",
     "imputer = SimpleImputer(strategy='median')\n",
-    "imputed_data = imputer.fit_transform(df_features[numeric_columns])\n",
-    "\n",
-    "print(\"Shape of imputed_data:\", imputed_data.shape)\n",
-    "print(\"Columns in numeric_columns:\", numeric_columns)\n"
+    "imputed_data = imputer.fit_transform(df_features[numeric_columns])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "dfcfc49e",
+   "id": "005dea95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "969d9937",
+   "id": "6cc346fa",
    "metadata": {},
    "outputs": [
     {
@@ -955,9 +953,126 @@
   },
   {
    "cell_type": "markdown",
-   "id": "392bde1f",
+   "id": "e79e760b",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fe405990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Model Performance:\n",
+      "Accuracy: 0.92\n",
+      "Precision: 0.9290322580645162\n",
+      "Recall: 0.9664429530201343\n",
+      "F1 Score: 0.9473684210526316\n",
+      "ROC-AUC Score: 0.9416370575075668\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Load the dataset\n",
+    "file_path = 'metdata_cleaned.csv'\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Creating dummy variables for 'department' and 'culture'\n",
+    "df = pd.get_dummies(df, columns=['department', 'culture'], drop_first=True)\n",
+    "\n",
+    "# Prepare the target variable\n",
+    "y = df['isPublicDomain']\n",
+    "\n",
+    "# Exclude non-numeric columns\n",
+    "numeric_columns = df.select_dtypes(include=['int64', 'float64']).columns\n",
+    "\n",
+    "# Prepare features\n",
+    "X = df[numeric_columns]\n",
+    "\n",
+    "# Impute missing values\n",
+    "imputer = SimpleImputer(strategy='median')\n",
+    "X_imputed = imputer.fit_transform(X)\n",
+    "\n",
+    "# Standardize the features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X_imputed)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize the Random Forest classifier\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Train the Random Forest model\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = rf_model.predict(X_test)\n",
+    "\n",
+    "# Calculate evaluation metrics\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "roc_auc = roc_auc_score(y_test, rf_model.predict_proba(X_test)[:, 1])\n",
+    "\n",
+    "# Print the evaluation metrics\n",
+    "print(f'Random Forest Model Performance:')\n",
+    "print(f'Accuracy: {accuracy}\\nPrecision: {precision}\\nRecall: {recall}\\nF1 Score: {f1}\\nROC-AUC Score: {roc_auc}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f761010a",
+   "metadata": {},
+   "source": [
+    "Comparing the performance metrics of the logistic regression model and the random forest model:\n",
+    "\n",
+    "1. **Accuracy:**\n",
+    "   - Logistic Regression: 0.84\n",
+    "   - Random Forest: 0.92\n",
+    "   \n",
+    "   The random forest model has a higher accuracy compared to the logistic regression model.\n",
+    "\n",
+    "2. **Precision:**\n",
+    "   - Logistic Regression: 0.8305\n",
+    "   - Random Forest: 0.929\n",
+    "   \n",
+    "   The random forest model also has a higher precision, indicating a better ability to correctly classify positive predictions.\n",
+    "\n",
+    "3. **Recall:**\n",
+    "   - Logistic Regression: 0.9866\n",
+    "   - Random Forest: 0.9664\n",
+    "   \n",
+    "   The logistic regression model has a higher recall, suggesting it is better at capturing true positives.\n",
+    "\n",
+    "4. **F1 Score:**\n",
+    "   - Logistic Regression: 0.9018\n",
+    "   - Random Forest: 0.9474\n",
+    "   \n",
+    "   The random forest model has a higher F1 score, which balances precision and recall.\n",
+    "\n",
+    "5. **ROC-AUC Score:**\n",
+    "   - Logistic Regression: 0.805\n",
+    "   - Random Forest: 0.942\n",
+    "   \n",
+    "   The random forest model has a significantly higher ROC-AUC score, indicating better overall performance in distinguishing between the two classes.\n",
+    "\n",
+    "In summary, based on these performance metrics, the random forest model generally outperforms the logistic regression model for this classification task. However, the choice between models also depends on the specific requirements and constraints of the project, such as computational resources, interpretability, and ease of implementation."
+   ]
   }
  ],
  "metadata": {
